--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ resources/bin_1000/chr_1000_gc_index.bed
 resources/bin_100/
 scripts/for_adsp/
 resources/regions_of_interest/Regions_VNTR_invar_multicopy_genes_100bp_window.txt.gz
+old*
